# execution

./: CMakeLists.txt  README.md  compile_commands.json
examples/: quickstart.cpp
include/execution/: concepts.hpp  then.hpp
include/execution/schedulers/: inline_scheduler.hpp
include/myexecution/: concepts.hpp  myexecution.hpp
include/myexecution/schedulers/: inline_scheduler.hpp  thread_pool_scheduler.hpp
include/myexecution/sender/: just.hpp  then.hpp
src/: thread_pool.cpp
toy/: thread_pool.hpp  toy.cpp  toy.hpp
